src/test/compile-fail/unnecessary-io.rs
// error-pattern: calculated effect is ''
io fn main() {
  log "hi";
}